tests/baselines/reference/narrowingByNonLiteralIndexedAccess.errors.txt
tests/cases/compiler/narrowingByNonLiteralIndexedAccess.ts(14,1): error TS2532: Object is possibly 'undefined'.
tests/cases/compiler/narrowingByNonLiteralIndexedAccess.ts(17,1): error TS2532: Object is possibly 'undefined'.


==== tests/cases/compiler/narrowingByNonLiteralIndexedAccess.ts (2 errors) ====
    interface IEye {
        visibility: number | undefined
    }
    
    interface IPirate {
        hands: number | undefined,
        eyes: IEye[]
    }
    
    const pirates: IPirate[] = [];
    
    const index: number = 1;
    
    pirates[index].hands++;
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    if (pirates[index].hands) pirates[index].hands++;
    
    pirates[index].eyes[index].visibility++;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
    if (pirates[index].eyes[index].visibility) pirates[index].eyes[index].visibility++;
    